Sorgente/src/objects/Corriere__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Sottocategoria__c</field>
                <operation>equals</operation>
                <value>Corriere nazionali, Corriere internazionali</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Corrieri</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corriere__c</fullName>
        <label>Opportunità</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Corrieri</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ospedale/Punto prelievo</fullName>
                </value>
                <value>
                    <fullName>Professional che consiglia</fullName>
                </value>
                <value>
                    <fullName>Spedizione verso lab</fullName>
                </value>
                <value>
                    <fullName>Spedizione da GS</fullName>
                </value>
                <value>
                    <fullName>Spedizione verso GS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Organizzazione</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tutto</label>
    </listViews>
    <nameField>
        <label>Nome Corriere</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizzazioni</pluralLabel>
    <recordTypes>
        <fullName>Corriere</fullName>
        <active>true</active>
        <label>Corriere</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organizzazioni</fullName>
        <active>true</active>
        <label>Organizzazioni</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>